更新项目以支持 Pek.PearUI 及相关改进
在 `publish-beta.yml` 和 `publish.yml` 中添加对 `Pek.PearUI` 的支持，更新打包步骤。
在 `NuGet.config` 中添加新的包源 `PekSmart`。
在 `AppVersionController.cs` 中使用可空类型以增强安全性。
更新 `DashBoard.cshtml` 和 `Default.cshtml` 中的组件引用，确保使用 `Pek.PearUI`。
在多个文件中添加文档注释以提高可读性。
更新 `Pek.PearUI.csproj` 中的 `Pek.NCubeUI` 版本号。
在 `README.md` 中更新项目名称并描述功能。
更新 `global.json` 中的 SDK 版本以支持最新功能。

--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-        - 'Pek.DsMallUI/**'
+        - 'Pek.PearUI/**'
   pull_request:
     branches: [ main ]
     paths:
-        - 'Pek.DsMallUI/**'
+        - 'Pek.PearUI/**'
   workflow_dispatch:
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
         dotnet build -c Release --version-suffix ${{ env.VERSION }}
     - name: Pack
       run: |
-        dotnet pack --no-build --version-suffix ${{ env.VERSION }} -c Release -o out Pek.DsMallUI/Pek.DsMallUI.csproj
+        dotnet pack --no-build --version-suffix ${{ env.VERSION }} -c Release -o out Pek.PearUI/Pek.PearUI.csproj
 
     - name: Publish
       run: |
