--- a/Pek.PearUI/Pek.PearUI.csproj
+++ b/Pek.PearUI/Pek.PearUI.csproj
@@ -63,8 +63,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Pek.AspNetCore" Version="4.11.2025.330-beta0609" />
-    <PackageReference Include="Pek.NCubeUI" Version="4.11.2025.324-beta1525" />
+    <PackageReference Include="Pek.AspNetCore" Version="4.11.2025.414" />
+    <PackageReference Include="Pek.NCubeUI" Version="4.11.2025.414" />
   </ItemGroup>
 
   <ItemGroup>
