更新包版本号
在 `Pek.PearUI.csproj` 文件中，`Pek.AspNetCore` 的版本从 `4.11.2025.414` 更新为 `4.11.2025.424-beta0850`，`Pek.NCubeUI` 的版本从 `4.11.2025.414` 更新为 `4.11.2025.417-beta1021`。由于缺乏具体的 `layui.js` 文件的更改内容，无法提供详细的更改描述。

--- a/Pek.PearUI/Pek.PearUI.csproj
+++ b/Pek.PearUI/Pek.PearUI.csproj
@@ -63,8 +63,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Pek.AspNetCore" Version="4.11.2025.414" />
-    <PackageReference Include="Pek.NCubeUI" Version="4.11.2025.414" />
+    <PackageReference Include="Pek.AspNetCore" Version="4.11.2025.424-beta0850" />
+    <PackageReference Include="Pek.NCubeUI" Version="4.11.2025.417-beta1021" />
   </ItemGroup>
 
   <ItemGroup>
