--- a/Pek.PearUI/Pek.PearUI.csproj
+++ b/Pek.PearUI/Pek.PearUI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <RootNamespace>Pek.PearUI</RootNamespace>
     <AssemblyName>Pek.NCubeUI.PearUI</AssemblyName>
     <AssemblyTitle>猿人易快速开发平台</AssemblyTitle>
